feat:[1.2D]完善用户角色